[gd_scene load_steps=2 format=3 uid="uid://cjk6wdwtgaphn"]

[ext_resource type="Script" uid="uid://c43ccatpk65a7" path="res://settings.gd" id="1"]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.839216)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Effects"
vertical_alignment = 1

[node name="EffectSlider" type="HSlider" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Music"
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Done"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/GridContainer/EffectSlider" to="." method="_on_effect_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_done_pressed"]
